--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Portfolio</h1>
+        <nav class="navigation">
+            <ul class ='container'>
+                <li class="childli"><a href="#">About Me</a></li>
+                <li class="childli"><a href="#">Skills</a></li>
+                <li class="childli"><a href="#">Contact Information</a></li>
+            </ul>
+        </nav>
 
 
-<script src = "javascript.js"></script>
+<script src="javascript.js"></script>
 </body>
 </html>
