Official Final Commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class ='container'>
                 <li class="childli"><a href="#">About Me</a></li>
                 <li class="childli"><a href="#">Skills</a></li>
-                <li class="childli"><a href="#">Contact Information</a></li>
+                <li class="childli"><a href="https://barsilay.myportfolio.com/" target="blank">Contact Information</a></li>
             </ul>
         </nav>
         <section class="about-me-container">
@@ -70,7 +70,7 @@
 
         </section>
 
-
+ 
 
 
 <script src="javascript.js"></script>
